# seedwebbase

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  config.py  pyproject.toml  requirements.txt
seedweb/: crud.py  database.py  main.py  models.py  schemas.py
tests/: conftest.py  test_main.py
tests/profiles/: test_profile_routes.py  test_profile_schemas.py  test_routes.py  test_schemas.py
tests/projects/: test_project_routes.py
